feat: enhance command handling with improved error messaging and new listener commands